# autonomous_robot

./: .gitignore  README.md  warehouse_AWS.yaml.pgm  warehouse_AWS.yaml.yaml
autonomous_robot_control/src/control_hardware/: package.xml  setup.py
autonomous_robot_control/src/control_hardware/control_hardware/: cmd2GPIO.py  cmd2pwm.py  joy_control_node.py  mux.py  pwm2GPIO.py
autonomous_robot_control/src/control_hardware/launch/: control_system.launch.py
autonomous_robot_control/src/joystick/: CMakeLists.txt  package.xml
autonomous_robot_control/src/joystick/include/joystick/: joy_compute_control.hpp
autonomous_robot_control/src/joystick/launch/: joystick.launch.py
autonomous_robot_control/src/joystick/src/: joy_compute_control.cpp  prototype_joy_driver.cpp  teleop_joy_node.cpp
autonomous_robot_description/: CMakeLists.txt  package.xml  ware_house_slam.pgm  ware_house_slam.yaml  ware_house_slam_serialize.data  warehouse_AWS.pgm  warehouse_AWS.yaml
autonomous_robot_description/config/: ekf.yaml  joint_controller.yaml  mapper_params_online_async.yaml  my_robot.lua  nav2_cart_params.yaml  nav2_params.yaml  twist_mux.yaml
autonomous_robot_description/launch/: cartographer_sim.launch.py  localization_AMCL_launch.py  localization_cartographer_sim.launch.py  navigation.launch.py  occupancy_grid.launch.py  online_async_launch.py  sim_gazebo.launch.py
autonomous_robot_description/meshes/: base_link.stl  camera_link.stl  front_hinge.stl  front_wheel_link.stl  left_wheel_link.stl  lidar_link.stl  rear_hinge.stl  rear_wheel_link.stl  right_wheel_link.stl
autonomous_robot_description/rviz/: urdf_config.rviz
autonomous_robot_description/urdf/: Assembly-Robot-URDF.urdf.xacro  autonomous_robot.urdf.xacro  autonomous_robot_gazebo.xacro  camera.xacro  common_properties.xacro  gazebo_color.xacro  imu.xacro  lidar.xacro  mobile_robot.xacro  ros2_control.xacro
robot_common_interfaces/: CMakeLists.txt  package.xml
robot_common_interfaces/msg/: SerComStruct.msg
ros2_mpu9250_driver/src/: mpu9250driver.cpp
rosbag2_2024_12_10-16_43_47/: metadata.yaml  rosbag2_2024_12_10-16_43_47_0.db3
sensors_package/: CMakeLists.txt  package.xml
sensors_package/launch/: all_sensors.launch.py  camera_launch.py
sensors_package/src/: camera_rgb_publisher.py
