<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tamirbasson99@gmail.com">tamirbasson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>python3</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>